k8s/st2-oslc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: st2-oslc
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: st2-oslc
  type: ClusterIP
